# MLDeployment-public

./: .gitignore  pyproject.toml
part1-onnx/: cpu.Dockerfile  engine_benchmark.py  export_model.py  gpu.Dockerfile
part2-online/: Dockerfile  deploy_online_service.sh  locustfile.py  oip_multi_model_server.py  run_load_test.sh  test_triton_client.py
part3-batch/: Dockerfile  batch_inference_pipeline.py  generate_dataset.py  run_on_dataflow.sh  user_posts.csv
